@@ -6,22 +6,16 @@ import java.util.stream.Collectors;
 
 public class MovieDataHandler {
     private final List<Movie> movieList;
-
     private final Predicate<Movie> filterByUniqueId;
-    private final Function<List<Movie>, Double> findHighestRating = movies -> movies.stream().mapToDouble(Movie::getImdbRating).max().orElse(0.0);
+
 
 
     public MovieDataHandler(List<Movie> movieList) {
         this.movieList = movieList;
-        filterByUniqueId = (movie1 -> (movieList.stream().filter(movie2 -> movie1.getId().equals(movie2.getId()))).count() == 1);
-
-
+        filterByUniqueId = movie1 -> movieList.stream().filter(movie2 -> movie1.getId().equals(movie2.getId()))
+                                                             .count() == 1;
     }
 
-    private static double getDoubleFromList(Function<List<Movie>, Double> func, List<Movie> list) {
-        System.out.println("running function");
-        return func.apply(list);
-    }
 
     // filter out duplicate ids
     public long findNumberOfMoviesByYear(int year) {
@@ -30,14 +24,14 @@ public class MovieDataHandler {
                                  .count();
     }
 
-    public int findRuntimeOfLongestMovie(List<Movie> movieList) {
+    public int findRuntimeOfLongestMovie() {
         return movieList.stream().filter(filterByUniqueId)
                                  .mapToInt(Movie::getRuntime)
                                  .max()
                                  .orElse(0);
     }
 
-    public long findNumberOfUniqueGenresByYear(List<Movie> movieList, int year) {
+    public long findNumberOfUniqueGenresByYear(int year) {
         return movieList.stream().filter(filterByUniqueId)
                                  .filter(movie1-> movie1.getYear() == year)
                                  .map(Movie::getGenres)
@@ -46,50 +40,78 @@ public class MovieDataHandler {
                                  .count();
     }
 
-    // FIX HIGHER ORDER FUNCTION IT RUNS EVERY TIME == BAD
-    public List<String> findActorsByHighestRatedMovie(List<Movie> movieList) {
+
+    public List<String> findActorsByHighestRatedMovie() {
+        double highestRating = movieList.stream().mapToDouble(Movie::getImdbRating)
+                                                 .max()
+                                                 .orElse(0.0);
+
         return movieList.stream().filter(filterByUniqueId)
-                                 .filter(movie -> movie.getImdbRating() == getDoubleFromList(findHighestRating, movieList))
+                                 .filter(movie -> movie.getImdbRating() == highestRating)
                                  .map(Movie::getCast)
                                  .flatMap(List::stream)
                                  .distinct()
-                                 .collect(Collectors.toList());
+                                 .toList();
     }
 
-    // FIX WITH HIGHER ORDER FUNC
-    // join with ", shared place with movie: "
-    public String findMovieTitleWithLeastNumberOfActors(List<Movie> movieList) {
-        int leastNumberOfActors = movieList.stream().filter(filterByUniqueId).mapToInt(movie -> movie.getCast().size()).min().orElseThrow();
-        return movieList.stream().filter(filterByUniqueId).filter(movie -> movie.getCast().size() == leastNumberOfActors).map(Movie::getTitle).collect(Collectors.joining(", shared place with movie: "));
+
+    public String findMovieTitleWithLeastNumberOfActors() {
+        int leastNumberOfActors = movieList.stream().filter(filterByUniqueId)
+                                                    .mapToInt(movie -> movie.getCast().size())
+                                                    .min()
+                                                    .orElseThrow();
+
+        return movieList.stream().filter(filterByUniqueId)
+                                 .filter(movie -> movie.getCast().size() == leastNumberOfActors)
+                                 .map(Movie::getTitle)
+                                 .collect(Collectors.joining(", shared place with movie: "));
     }
 
-    public long findNumberOfActorsStarringInTwoOrMoreMovies(List<Movie> movieList) {
+    public long findNumberOfActorsStarringInTwoOrMoreMovies() {
         return movieList.stream().filter(filterByUniqueId)
                                  .map(Movie::getCast)
                                  .flatMap(List::stream)
-                                 .distinct()
-                                 .filter(actor -> movieList.stream().filter(movie -> movie.getCast()
-                                                                          .contains(actor))
-                                                                          .count() > 1)
+                                 .collect(Collectors.groupingBy(actor -> actor, Collectors.counting()))
+                                 .entrySet()
+                                 .stream()
+                                 .filter(entry -> entry.getValue() > 1)
                                  .count();
     }
 
     // HORRIBLE FIX IT
-    public String findActorsFoundInMostMovies(List<Movie> movieList) {
-        Map<String,Long> mapOfActorsCountedInMovies = movieList.stream().filter(filterByUniqueId).map(Movie::getCast).flatMap(List::stream).collect(Collectors.groupingBy(String::valueOf, Collectors.counting()));
+    public String findActorsFoundInMostMovies() {
+        Map<String,Long> mapOfActorsCountedInMovies = movieList.stream().filter(filterByUniqueId)
+                                                                        .map(Movie::getCast)
+                                                                        .flatMap(List::stream)
+                                                                        .collect(Collectors.groupingBy(actor -> actor, Collectors.counting()));
 
-        long max = mapOfActorsCountedInMovies.entrySet().stream().max(Map.Entry.comparingByValue()).orElseThrow().getValue();
+        long max = mapOfActorsCountedInMovies.entrySet().stream()
+                                                        .max(Map.Entry.comparingByValue())
+                                                        .orElseThrow()
+                                                        .getValue();
 
-        return mapOfActorsCountedInMovies.entrySet().stream().filter(entry -> entry.getValue() == max).map(Map.Entry::getKey).collect(Collectors.joining(", shared place with actor: "));
+        return mapOfActorsCountedInMovies.entrySet().stream()
+                                                    .filter(entry -> entry.getValue() == max)
+                                                    .map(Map.Entry::getKey)
+                                                    .collect(Collectors.joining(", shared place with actor: "));
     }
 
-    public long findNumberOfUniqueLanguagesInMovies(List<Movie> movieList) {
-        return movieList.stream().filter(filterByUniqueId).map(Movie::getLanguages).flatMap(List::stream).distinct().count();
+    public long findNumberOfUniqueLanguagesInMovies() {
+        return movieList.stream().filter(filterByUniqueId)
+                                 .map(Movie::getLanguages)
+                                 .flatMap(List::stream)
+                                 .distinct()
+                                 .count();
     }
 
     // contestant for higher level function
-    public boolean moviesHaveDuplicatesOfTitles(List<Movie> movieList) {
-        return movieList.stream().filter(filterByUniqueId).map(Movie::getTitle).distinct().count() < movieList.stream().filter(filterByUniqueId).count();
+    public boolean moviesHaveDuplicatesOfTitles() {
+        return movieList.stream().filter(filterByUniqueId)
+                                 .map(Movie::getTitle)
+                                 .distinct()
+                                 .count() < movieList.stream()
+                                 .filter(filterByUniqueId)
+                                 .count();
     }
 
 
